fix: adjust spacing

--- a/www/src/styles/base/globals.css
+++ b/www/src/styles/base/globals.css
@@ -18,16 +18,16 @@ body {
 .ContentArea {
   /* Add spacing between components  */
   > div + div {
-    margin-bottom: theme('spacing.8');
+    margin-top: theme('spacing.8');
   }
   /* Last component should not have spacing  */
   > div:last-child {
-    margin-bottom: 0;
+    margin-top: 0;
   }
 
   /* Any component with this class name will not have spacing below  */
   > .remove-between-component-margin {
-    margin-bottom: 0;
+    margin-top: 0;
   }
 }
 
